welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:11: error: too many arguments for method gauche: ()Unit
  	else if (msg=="I"){gauche(2);avance()}
                                 ^